# coop-crawl

./: README.md  SPEC.md  TODO_CLAUDE.md  config.py  pyproject.toml
coopcrawl/: __init__.py  __main__.py  diff.py  entry.py  env.py  errors.py  fetch.py  llm.py  notify.py  runtime.py
tests/: conftest.py  test_diff.py  test_errors.py  test_llm.py  test_notify.py
