[project]
name = "coopcrawl"
version = "0.1.0"
description = "Local daemon that polls cooperative URLs and fires Telegram pings on interesting diffs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.20",
    "requests>=2.32",
    "openai>=1.40",
    "python-telegram-bot>=21",
    "pydantic>=2.7",
]

[project.scripts]
coopcrawl = "coopcrawl.runtime:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ty>=0.0.1a1",
    "ruff>=0.5",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coopcrawl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["coopcrawl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
